@@ -1,10 +1,12 @@
 package com.codesquad.issuetracker.api.milestone.controller;
 
+import com.codesquad.issuetracker.api.milestone.domain.MilestoneVo;
 import com.codesquad.issuetracker.api.milestone.dto.request.MilestoneRequest;
 import com.codesquad.issuetracker.api.milestone.dto.request.MilestoneStatusRequest;
-import com.codesquad.issuetracker.api.milestone.dto.response.EditMileStoneResponse;
 import com.codesquad.issuetracker.api.milestone.dto.response.MilestonesResponse;
+import com.codesquad.issuetracker.api.milestone.filterStatus.FilterStatus;
 import com.codesquad.issuetracker.api.milestone.service.MilestoneService;
+import java.util.Collections;
 import java.util.Map;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
@@ -15,6 +17,7 @@ import org.springframework.web.bind.annotation.PatchMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 @RequiredArgsConstructor
@@ -25,40 +28,44 @@ public class MilestoneController {
 
     @PostMapping("/api/{organizationTitle}/milestones")
     public ResponseEntity<Map<String, Long>> create(@PathVariable String organizationTitle,
-            @RequestBody MilestoneRequest mileStoneRequest) {
+                                                    @RequestBody MilestoneRequest mileStoneRequest) {
         long milestoneId = milestoneService.create(organizationTitle, mileStoneRequest);
-        return ResponseEntity.status(HttpStatus.CREATED).body(Map.of("id", milestoneId));
+        return ResponseEntity.status(HttpStatus.CREATED)
+                .body(Collections.singletonMap("id", milestoneId));
     }
 
     @GetMapping("/api/{organizationTitle}/milestones/{milestoneId}")
-    public ResponseEntity<EditMileStoneResponse> read(@PathVariable Long milestoneId) {
-        EditMileStoneResponse mileStoneResponse = milestoneService.read(milestoneId);
+    public ResponseEntity<MilestoneVo> read(@PathVariable Long milestoneId) {
+        MilestoneVo mileStoneResponse = milestoneService.read(milestoneId);
         return ResponseEntity.ok(mileStoneResponse);
     }
 
     @GetMapping("/api/{organizationTitle}/milestones")
-    public ResponseEntity<MilestonesResponse> readAll(@PathVariable String organizationTitle) {
-        MilestonesResponse mileStonesResponse = milestoneService.readAll(organizationTitle);
+    public ResponseEntity<MilestonesResponse> readAll(@PathVariable String organizationTitle,
+                                                      @RequestParam String filter) {
+        FilterStatus filterStatus = FilterStatus.from(filter);
+        MilestonesResponse mileStonesResponse = milestoneService.readAll(organizationTitle, filterStatus);
         return ResponseEntity.ok(mileStonesResponse);
     }
 
     @PatchMapping("/api/{organizationTitle}/milestones/{milestoneId}")
     public ResponseEntity<Map<String, Long>> update(@PathVariable Long milestoneId,
-            @RequestBody MilestoneRequest mileStoneRequest) {
+                                                    @RequestBody MilestoneRequest mileStoneRequest) {
         long id = milestoneService.update(milestoneId, mileStoneRequest);
-        return ResponseEntity.ok(Map.of("id", id));
+        return ResponseEntity.ok(Collections.singletonMap("id", id));
+    }
+
+    @PatchMapping("/api/{organizationTitle}/milestones/{milestoneId}/status")
+    public ResponseEntity<Map<String, Long>> updateStatus(@PathVariable Long milestoneId,
+                                                          @RequestBody MilestoneStatusRequest milestoneStatusRequest) {
+        milestoneService.updateStatus(milestoneId, milestoneStatusRequest.getIsClosed());
+        return ResponseEntity.ok(Collections.singletonMap("id", milestoneId));
     }
 
     @DeleteMapping("/api/{organizationTitle}/milestones/{milestoneId}")
     public ResponseEntity<Void> delete(@PathVariable Long milestoneId) {
         milestoneService.delete(milestoneId);
-        return ResponseEntity.noContent().build();
-    }
-
-    @PatchMapping("/api/{organizationTitle}/milestones/{milestoneId}/status")
-    public ResponseEntity<Map<String, Long>> updateStatus(@PathVariable Long milestoneId,
-            @RequestBody MilestoneStatusRequest milestoneStatusRequest) {
-        milestoneService.updateStatus(milestoneId, milestoneStatusRequest.isClosed());
-        return ResponseEntity.ok(Map.of("id", milestoneId));
+        return ResponseEntity.noContent()
+                .build();
     }
 }
